--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.22",
     "i18next": "^25.5.2",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
